# Debator-Agent

./: README.md
debate_contest/: README.md  pyproject.toml
debate_contest/src/debate_contest/: crew.py  main.py
debate_contest/src/debate_contest/config/: agents.yaml  tasks.yaml
