[project]
name = "debate_contest"
version = "0.1.0"
description = "debate_contest using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.130.0,<1.0.0"
]

[project.scripts]
debate_contest = "debate_contest.main:run"
run_crew = "debate_contest.main:run"
train = "debate_contest.main:train"
replay = "debate_contest.main:replay"
test = "debate_contest.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
